--- a/src/app.component.html
+++ b/src/app.component.html
@@ -1,4 +1,5 @@
 <app-matrix-rain></app-matrix-rain>
+<app-grid-pattern></app-grid-pattern>
 <app-kaleidoscope-cursor></app-kaleidoscope-cursor>
 <main class="min-h-screen bg-gray-900/80 text-gray-200 font-sans antialiased">
   <div class="relative isolate px-6 pt-14 lg:px-8">
